--- a/modules/panel/task_links.html
+++ b/modules/panel/task_links.html
@@ -2,7 +2,7 @@
     <span>General information </span>
     <ul>
         <!--li module=Demographics>Demographics</li-->
-        <li module=Group_Allocation> Group Allocation </li>
+        <!--li module=Group_Allocation> Group Allocation </li-->
 
         <li module=Medical_history>Medical history</li>
     </ul>
@@ -22,7 +22,7 @@
     </div>
 
     <div class='nav__ID'>
-     <span><h2><u>Screening</u></h2></span><br>
+     <span><u>Screening</u></span><br>
      <ul>
         <li module=Screening_Visitdate>Visit date</li>
         <li module=Screening_Anthro>Anthropometry</li>
@@ -47,12 +47,12 @@
     </ul>
 </div>
     <div class='nav__ID'>
-    <span><h2><u>Visit 1 - Evening</h2></span></u><br>
+    <span><u>Visit 1_ Evening</span></u><br>
     <ul>
         <li module=Night_Visit_Date>Visit Date</li>
         <li module=Night_Visit_Anthro>Anthropometry</li>
 <br></ul>
-        <span><h3> Testing Part i </h3></span>
+        <span>Tests and Questionnaires 1 </span>
         <br>
         <li module=Mental_Fatigue_One> Mental Fatigue Scale 1.0 </li>
         <li module=Pre_PASAT>Paced Auditory Serial Addition Task (PASAT)</li>
@@ -62,15 +62,12 @@
         <li module=Mental_Fatigue_Four> Mental Fatigue Scale 1.3 (3 hours after PASAT)</li>
         <li module=Mental_Fatigue_Five> Mental Fatigue Scale 1.4 (4 hours after PASAT)</li>
 
-
-
-
         <!--li module=NightVisit_ERP> Event Related Potentials (ERP) </li-->
 
 
 
       <br>
-<span> Memory tasks Set 1 -Word Learning and Recall</span>
+        <span> Memory tasks Set 1 -Word Learning and Recall</span>
         <li module=Prac_Evening_Wordpairs_Set1>Set 1 Word Pairs- Practice </li>
         <li module=wordpairs1t1>Evening Memory task Word Pair Set 1 Trial 1</li>
         <li module=wordpairs1t2>Evening Memory task Word Pair Set 1 Trial 2</li>
@@ -78,7 +75,7 @@
 
 
         <br>
-        <span> Memory tasks Set 2 - Word Learning and Recall</span>
+        <span> Memory tasks Set 2_ Word Learning and Recall</span>
         <li module=Prac_Evening_Wordpairs_Set2>Set 2 Word Pairs- Practice</li>
         <li module=wordpairs2t1>Evening Memory task Word Pair Set 2 Trial 1</li>
         <li module=wordpairs2t2>Evening Memory task Word Pair Set 2 Trial 2</li>
@@ -86,7 +83,7 @@
 
 
 <br>
-        <span><h3> Testing Part ii </h3></span>
+        <span> Tests and Questionnaires 2</span>
         <br>
         <li module=KSS1>Karolinska Sleepiness Scale (KSS) 1.0</li>
         <li module=KDT1> Karolinska Drowsiness Test (KDT) 1.0 </li>
@@ -100,7 +97,7 @@
 
 
     <div class='nav__ID'>
-    <span><h2><u>Visit 1 - Morning</h2></span></u><br>
+    <span><u>Visit 1_ Morning</span></u><br>
     <ul>
         <li module=KSS2>Karolinska Sleepiness Scale (KSS) 2.0</li>
         <li module=KDT2> Karolinska Drowsiness Test (KDT) 2.0</li>
@@ -119,8 +116,8 @@
 
         <br>
         <span>Morning Memory Tasks</span>
-        <li module=Morning_word_pair_Set_1> Memory test 1 - Word Pairs</li>
-        <li module=Morning_word_pair_Set_2> Memory test 2 - Word Pairs</li>
+        <li module=Morning_word_pair_Set_1> Memory test 1_ Word Pairs</li>
+        <li module=Morning_word_pair_Set_2> Memory test 2_ Word Pairs</li>
         <li module=Morning_Memorytask_Fileupload> Memory Task Paperwork</li>
     </ul>
 </div>
@@ -129,4 +126,7 @@
     <div class='nav__ID'>
     <span>Data Uploading </span>
      <li module=Morning_Bloodsaliva> Blood and Saliva Sample</li>
-        <li module=MRI> Magnetic Resonance Imagining </li>
+     <li module=MRI> Magnetic Resonance Imagining </li>
+     <li module=RSQ_D>Restorative Sleep Questionnaire Daily Version (RSQ-D)</li>
+     <li module=RSQ_W >Restorative Sleep Questionnaire Weekly Version (RSQ-W)</li>
+      </div>
