--- a/system/flash/LCT_7.htm
+++ b/system/flash/LCT_7.htm
@@ -2,7 +2,7 @@
 
 <b><u>
 <span lang="EN-AU" style="font-family:&quot;Gill Sans MT&quot;">Processing Speed Condition</span></u></b>
-In this final task - 
+In this final task_ 
 <b><i>Mark</i></b> both the <b>CAPITAL LETTERS</b> and <b><u>the letters before</u></b> and <b><u>after</u></b> the <b>DOUBLE SPACES</b> with the left button on the mouse.
 This time complete the entire page as quickly and accurately as possible. 
 Go from left to right as quickly as you can without missing any. 
