--- a/modules/edc/task/finger_tapping_6.form.html
+++ b/modules/edc/task/finger_tapping_6.form.html
@@ -11,6 +11,7 @@
 <section style='margin:auto'>
     VmInclude:__PARTS__/toolbar/back_save.html
     <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="1100" height="800" align="middle">
+      <div id = test>
         <param value="__CURRENT_PATH__/../../../flash/Tapping_6.swf?v=8"/>
         <!--[if !IE]>-->
         <object type="application/x-shockwave-flash" data="__CURRENT_PATH__/../../../flash/Tapping_6.swf?v=8" width="1100" height="800">
@@ -23,6 +24,7 @@
         </object>
         <!--<![endif]-->
     </object>
+    </div>
 </section>
 <script>
     function F__ID(){
@@ -109,4 +111,7 @@
 </script>
 <style>
     VmInclude:__PARTS__/toolbar/toolbar.css
+    #test{
+      margin-left:350px;
+    }
 </style>
