--- a/modules/edc/task/finger_tapping_12.form.html
+++ b/modules/edc/task/finger_tapping_12.form.html
@@ -10,6 +10,7 @@
 </section>
 <section style='margin:auto'>
     VmInclude:__PARTS__/toolbar/back_save.html
+<div id=test>
     <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="1100" height="800" align="middle">
         <param value="__CURRENT_PATH__/../../../flash/Tapping_12.swf?v=7"/>
         <!--[if !IE]>-->
@@ -23,6 +24,7 @@
         </object>
         <!--<![endif]-->
     </object>
+    </div>
 </section>
 <script>
     function F__ID(){
@@ -121,4 +123,8 @@
 </script>
 <style>
     VmInclude:__PARTS__/toolbar/toolbar.css
+
+    #test{
+    margin-left:350px;
+    }
 </style>
