--- a/modules/participant-and-others/task/participant.html
+++ b/modules/participant-and-others/task/participant.html
@@ -4,7 +4,7 @@
 <script>
     function F__ID(){
         //-------------------------------------
-		_fields="_Form,Participant ID|UID,Screening_Number,Group,Study_Number,Subject_Initials,Gender,DOB,_Data_Entry,_Setup,_Quest,_Login_ID,_Password";
+		_fields="_Form,Participant ID|_UID,Study_Number,Subject_Initials,Group,Gender,DOB,_Data_Entry,_Setup,_Quest,_Login_ID,_Password";
         _fields+=",Submit Date|DateTime,Submitted by|Author,_Delete";
         //-------------------------------------
         VmInclude:__COMPONENT__/grid/grid.v3.js
