--- a/modules/edc/task/kss.QUEST.html
+++ b/modules/edc/task/kss.QUEST.html
@@ -9,7 +9,7 @@
                 <u style='cursor:pointer;float:right;' id=Participant_r__ID>Remove</u>
             </td></tr>
             <tr><td colspan=2 class=' '><br/><p style='text-align:center;color:#000000; font-size:12px'>Please indicate your sleepiness during the last 5 minutes. Give yourself a rating by clicking in the appropriate box. Remember that you may also use intermediate steps.</p><br/></td></tr>
-            <tr><td colspan=2 class=' '><p><img src="__BASE__/woolcock-imr/cfs-nrs/images/bear.png" style='width:200px'></p>The Bear is asleep and is at the very end point of this sleepiness scale!<br/><br/></td></tr>
+            <tr><td colspan=2 class=' '><p><img src="images/bear.png" style='width:200px'></p>The Bear is asleep and is at the very end point of this sleepiness scale!<br/><br/></td></tr>
             <tr><td data-id=KSS data-custom=1 style='width:50px;border:0;'></td><td style='border: 0;padding:5px'><input class=modified_radio__ID type=radio value=1  id=KSS__ID name=KSS ><label for=KSS__ID class=rb__ID>1 - Very Alert</label></td></tr>
 
          <tr><td style='width:50px;border:0;'></td><td style='border: 0;padding:5px'><input class=modified_radio__ID type=radio value=2  id=tr_kss2 name=KSS ><label for=tr_kss2 class=rb__ID>2 -&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label></td></tr>
