--- a/modules/edc/task/mentalscale.form.html
+++ b/modules/edc/task/mentalscale.form.html
@@ -17,7 +17,7 @@
             	    <!-- -->
                     <tr><td colspan=3 style='text-align:left'><br><b> How fatigued do you feel right now? Please make a single mark on the line below
                             </b><br><br></td></tr>
-                            <tr><td colspan=3 style='text-align:left'><p><img src="__BASE__/woolcock-imr/cfs-nrs/images/lion.png" style='width:200px' style=""></p>The Lion is very fatigued – awake -no energy - but not sleepy<br/><br/></td></tr>
+                            <tr><td colspan=3 style='text-align:left'><p><img src="images/lion.png" style='width:200px' style=""></p>The Lion is very fatigued – awake -no energy - but not sleepy<br/><br/></td></tr>
 
                             <tr><td colspan=3 style='text-align:center'><br>Fatigue</td></tr>
                             <tr><td>Not at all fatigued</td><td data-id=Mental_Fatigue data-custom=1></td><td>The Worst Fatigue Imaginable</td></tr>
