--- a/modules/participant-and-others/task/participant-login-setup.html
+++ b/modules/participant-and-others/task/participant-login-setup.html
@@ -35,7 +35,7 @@
 			q_list=$vm.module_list[prefix+"quest_list"].list;
 			record=$vm.vm['__ID'].op.input.record;
             $('#Login_ID__ID').val(record.UID+"-"+setup_pid);
-            $('#Participant__ID').val(record.UID);
+            $('#Participant__ID').val(record.UID+" "+record.Study_Number);
             $('#Password__ID').val('');
             load_data();
         }
