--- a/modules/edc/task/LCT_form.html
+++ b/modules/edc/task/LCT_form.html
@@ -8,7 +8,7 @@
         </table>
     </form>
 </section>
-<section style='margin:auto'>
+<section style="margin:auto;height:1000;width:800">
     VmInclude:__COMPONENT__/toolbar/back_save.html
     <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="1000" height="800" margin="auto">
         <param value="__CURRENT_PATH__/flash/LCT.swf"/>
