--- a/modules/panel/task_links.html
+++ b/modules/panel/task_links.html
@@ -20,35 +20,129 @@
   </div>
 
   <div class='nav__ID'>
-    <span><u>Screening</u></span><br>
-    <ul>
+      <!--span><u>Screening</u></span><br>
+      <ul>
+        <li module=Screening_Visitdate>Visit date</li>
+        <li module=Screening_Anthro>Anthropometry</li>
+        <li module=Screening_Actigraphy>Actigraphy</li>
+        <li module=Screening_Sleepdiary>Sleep Diary</li>
+        <li module=Screening_DiagnosticPSG>Diagnostic Sleep PSG300 Report </li>
+        <li module=Screening_EDF> EDF file Upload</li>
+        <li module=Wristox>WristOx</li>
+        <li module=Screening_Sleepscoring>Sleep Scoring File Upload</li>
+        <li module=Screening_IncluExclu>Inclusion & Exclusion Criteria</li>
+      </ul>
+    <br-->
+    <span>Screening</span>
+    <br>
+    <b>Select which Participant Group you are Screening</b>
+    <br>
+    <br>
+    <button type="button" class="collapsible">Chronic Fatigue Syndrome</button>
+      <div class="content">
+        <br>
+        <ul>
+          <li module=Screening_Visitdate>Visit date</li>
+          <li module=Screening_Anthro>Anthropometry</li>
+          <li module=Screening_Actigraphy>Actigraphy</li>
+          <li module=Screening_Sleepdiary>Sleep Diary</li>
+          <li module=Screening_DiagnosticPSG>Diagnostic Sleep PSG300 Report </li>
+          <li module=Screening_EDF> EDF file Upload</li>
+          <li module=Wristox>WristOx</li>
+          <li module=Screening_Sleepscoring>Sleep Scoring File Upload</li>
+          <li module=Screening_IncluExclu>Inclusion & Exclusion Criteria</li>
+        </ul>
+        <span>Questionnaires</span>
+        <ul>
+          <li module=Screening_SB>StopBANG Questionnaire</li>
+          <li module=Screening_MFSI>Multidimensional Fatigue Symptom Inventory (MFSI)</li>
+          <li module=Screening_DASS>Depression Anxiety Stress Scale (DASS-21)</li>
+          <li module=Screening_PSQI>Pittsburgh Sleep Quality Index (PSQI)</li>
+          <li module=Screening_Chalder>Chalder's Fatigue Scale</li>
+          <li module=Screening_ESS>Epworth Sleepiness Scale (ESS)</li>
+          <li module=Screening_Canadian>Canadian Consensus Severity Scale</li>
+          <li module=Screening_SFH> Short Form Health Survey </li> 
+        </ul>
+      </div>
+    <button type="button" class="collapsible">Non-Restorative Sleep</button>
+      <div class="content">
+        <br>
+        <ul>
+        <li module=Screening_Visitdate>Visit date</li>
+        <li module=Screening_Anthro>Anthropometry</li>
+        <li module=Screening_Actigraphy>Actigraphy</li>
+        <li module=Screening_Sleepdiary>Sleep Diary</li>
+        <li module=Screening_DiagnosticPSG>Diagnostic Sleep PSG300 Report </li>
+        <li module=Screening_EDF> EDF file Upload</li>
+        <li module=Wristox>WristOx</li>
+        <li module=Screening_Sleepscoring>Sleep Scoring File Upload</li>
+        <li module=Screening_IncluExclu>Inclusion & Exclusion Criteria</li>
+        </ul>
+        <span>Questionnaires</span>
+          <ul>
+          <li module=Screening_SB>StopBANG Questionnaire</li>
+          <li module=Screening_PSQI>Pittsburgh Sleep Quality Index (PSQI)</li>
+          <li module=Screening_DASS>Depression Anxiety Stress Scale (DASS-21)</li>
+          <li module=Screening_Chalder>Chalder's Fatigue Scale</li>
+          <li module=Screening_ESS>Epworth Sleepiness Scale (ESS)</li>
+          </ul>
+      </div>
+    <button type="button" class="collapsible">Insomnia</button>
+    <div class="content">
+      <br>
+      <ul>
       <li module=Screening_Visitdate>Visit date</li>
       <li module=Screening_Anthro>Anthropometry</li>
       <li module=Screening_Actigraphy>Actigraphy</li>
       <li module=Screening_Sleepdiary>Sleep Diary</li>
       <li module=Screening_DiagnosticPSG>Diagnostic Sleep PSG300 Report </li>
       <li module=Screening_EDF> EDF file Upload</li>
+      <li module=Wristox>WristOx</li>
       <li module=Screening_Sleepscoring>Sleep Scoring File Upload</li>
       <li module=Screening_IncluExclu>Inclusion & Exclusion Criteria</li>
-    </ul>
-  <br>
-  <span>Questionnaires</span>
-    <ul>
-      <li module=Screening_MFSI>Multidimensional Fatigue Symptom Inventory (MFSI)</li>
-      <li module=Screening_PSQI>Pittsburgh Sleep Quality Index (PSQI)</li>
-      <li module=Screening_DASS>Depression Anxiety Stress Scale (DASS-21)</li>
-      <li module=Screening_Chalder>Chalder's Fatigue Scale</li>
-      <li module=Screening_ESS>Epworth Sleepiness Scale (ESS)</li>
-      <li module=Screening_Canadian>Canadian Consensus Severity Scale</li>
-      <li module=Screening_SFH> Short Form Health Survey </li>
-    </ul>
+      </ul>
+      <span>Questionnaires</span>
+      <ul>
+        <li module=Screening_SB>StopBANG Questionnaire</li>
+        <li module=Screening_ISI>Insomnia Severity Index</li>
+        <li module=Screening_PSQI>Pittsburgh Sleep Quality Index (PSQI)</li>
+        <li module=Screening_DASS>Depression Anxiety Stress Scale (DASS-21)</li>
+        <li module=Screening_Chalder>Chalder's Fatigue Scale</li>
+        <li module=Screening_ESS>Epworth Sleepiness Scale (ESS)</li>
+      </ul>
+    </div>
+    <button type="button" class="collapsible">Healthy Controls</button>
+    <div class="content">
+      <br>
+      <ul>
+        <li module=Screening_Visitdate>Visit date</li>
+        <li module=Screening_Anthro>Anthropometry</li>
+        <li module=Screening_Actigraphy>Actigraphy</li>
+        <li module=Screening_Sleepdiary>Sleep Diary</li>
+        <li module=Screening_DiagnosticPSG>Diagnostic Sleep PSG300 Report </li>
+        <li module=Screening_EDF> EDF file Upload</li>
+        <li module=Wristox>WristOx</li>
+        <li module=Screening_Sleepscoring>Sleep Scoring File Upload</li>
+        <li module=Screening_IncluExclu>Inclusion & Exclusion Criteria</li>
+      </ul>
+      <span>Questionnaires</span>
+      <ul>
+        <li module=Screening_SB>StopBANG Questionnaire</li>
+        <li module=Screening_ISI>Insomnia Severity Index</li>
+        <li module=Screening_PSQI>Pittsburgh Sleep Quality Index (PSQI)</li>
+        <li module=Screening_DASS>Depression Anxiety Stress Scale (DASS-21)</li>
+        <li module=Screening_Chalder>Chalder's Fatigue Scale</li>
+        <li module=Screening_ESS>Epworth Sleepiness Scale (ESS)</li>
+      </ul>
+    </div>
   </div>
+
   <div class='nav__ID'>
   <span>Visit 1 - Evening</span><br>
-  <ul>
+    <ul>
   <li module=Night_Visit_Date>Visit Date</li>
   <li module=Night_Visit_Anthro>Anthropometry</li>
-  </ul>
+    </ul>
 
 
   <span>Tests and Questionnaires 1 </span>
@@ -82,10 +176,8 @@
       <li module=Evening_Wordpairs_S2T2>Evening Memory task Word Pair Set 2 Trial 2</li>
       <li module=Evening_Wordpairs_S2T3>Evening Memory task Word Pair Set 2 Trial 3</li>
     </ul>
-
   <br>
   <span> Tests and Questionnaires 2</span>
-
   <ul>
     <li module=FTT_12>Evening Finger Tapping Task (12 Minutes)</li>
     <li module=KSS1>Evening Karolinska Sleepiness Scale (KSS) 1.0</li>
@@ -116,9 +208,11 @@
 
 
   <div class='nav__ID'>
-    <span>Data Uploading </span>
-    <li module=Morning_Bloodsaliva> Blood and Saliva Sample</li>
-    <li module=MRI> Magnetic Resonance Imagining </li>
-    <li module=RSQ_D>Restorative Sleep Questionnaire Daily Version (RSQ-D)</li>
-    <li module=RSQ_W >Restorative Sleep Questionnaire Weekly Version (RSQ-W)</li>
+    <span>Data Uploading</span>
+    <ul>
+      <li module=Morning_Bloodsaliva> Blood and Saliva Sample</li>
+      <li module=MRI> Magnetic Resonance Imagining </li>
+      <li module=RSQ_D>Restorative Sleep Questionnaire Daily Version (RSQ-D)</li>
+      <li module=RSQ_W >Restorative Sleep Questionnaire Weekly Version (RSQ-W)</li>
+    </ul>
   </div>
