--- a/modules/panel/main.html
+++ b/modules/panel/main.html
@@ -136,6 +136,22 @@
     	}
     	//--------------------------------------------------------
     }
+
+
+		var coll = document.getElementsByClassName("collapsible");
+			var i;
+
+			for (i = 0; i < coll.length; i++) {
+				coll[i].addEventListener("click", function () {
+					this.classList.toggle("active");
+					var content = this.nextElementSibling;
+					if (content.style.display === "block") {
+						content.style.display = "none";
+					} else {
+						content.style.display = "block";
+					}
+				});
+			}
 </script>
 
 <style>
@@ -150,7 +166,7 @@
 		padding:20px 0 0 20px;
 	}
 	#D__ID li {
-		color:#555;
+		color:#000;
 	}
 	li::before{
 		font-size: 20px!Important;
@@ -178,4 +194,28 @@
 			padding:10px 0 0 10px;
 		}
 	}
+/*collapsible*/
+.collapsible {
+	background-color:;
+  color: black;
+  padding: 5px;
+  width: 75%;
+	font-weight:500;
+  border: none;
+  text-align: left;
+  outline: none;
+	display:block;
+}
+
+.content {
+ 
+  display: none;
+  overflow: hidden;
+  ;
+}
+.button{
+	width:380px;
+}
+
+
 </style>
