--- a/modules/panel/main.child.html
+++ b/modules/panel/main.child.html
@@ -129,6 +129,20 @@
 		}
 		//--------------------------------------------------------
 	}
+	var coll = document.getElementsByClassName("collapsible");
+		var i;
+
+		for (i = 0; i < coll.length; i++) {
+			coll[i].addEventListener("click", function () {
+				this.classList.toggle("active");
+				var content = this.nextElementSibling;
+				if (content.style.display === "block") {
+					content.style.display = "none";
+				} else {
+					content.style.display = "block";
+				}
+			});
+		}
 </script>
 
 <style>
@@ -171,4 +185,26 @@
 			padding:10px 0 0 10px;
 		}
 	}
+	/*collapsible*/
+.collapsible {
+	background-color:;
+  color: black;
+  padding: 5px;
+  width: 75%;
+	font-weight:500;
+  border: none;
+  text-align: left;
+  outline: none;
+	display:block;
+}
+
+.content {
+ 
+  display: none;
+  overflow: hidden;
+  ;
+}
+.button{
+	width:380px;
+}
 </style>
