--- a/modules/edc/task/stopbang-form.html
+++ b/modules/edc/task/stopbang-form.html
@@ -17,51 +17,49 @@
                 <u style='cursor:pointer;float:right;' id=Participant_r__ID>Remove</u>
             </td></tr>
 
-            <tr><td colspan=5 ><br><b><i>How likely are you to doze or fall asleep in the following situations, in contrast to just feeling tired? This refers to your usual way of life in recent times. Even if you have not done some of these things recently, try to work out how they would have affected you.
-            </i></b><br><br>
-            </td></tr>
+            <tr><td></td><td class=C__ID___answ><b>No</td><td class=C__ID___answ><b>Yes</b></td></tr>
 
             <tr><td data-id=SB1 data-custom=1>Do you snore loudly (loud enough to be heard through closed doors or your bed-partner elbows you for snoring at night)?</td>
-                <td>No<input type=radio value=0 name=SB1/></td>
-                <td>Yes<input type=radio value=1 name=SB1/></td>
+                <td><input type=radio value=0 name=SB1 /></td>
+                <td><input type=radio value=1 name=SB1 /></td>
             </tr>
             <tr><td data-id=SB2 data-custom=1>Do you often feel tired, fatigued, or sleepy during the daytime (such as falling asleep during driving or talking to
             someone)?</td>
-                <td>No<input type=radio value=0 name=SB2/></td>
-                <td>Yes<input type=radio value=1 name=SB2/></td>
+                <td><input type=radio value=0 name=SB2 /></td>
+                <td><input type=radio value=1 name=SB2 /></td>
             </tr>
             <tr><td data-id=SB3 data-custom=1>Has anyone observed you stop breathing or choking/gasping during your sleep?</td>
-                <td>No<input type=radio value=0 name=SB3/></td>
-                <td>Yes<input type=radio value=1 name=SB3/></td>
+                <td><input type=radio value=0 name=SB3 /></td>
+                <td><input type=radio value=1 name=SB3 /></td>
             </tr>
             <tr><td data-id=SB4 data-custom=1>Do you have or are being treated for high blood pressure?</td>
-                <td>No<input type=radio value=0 name=SB4/></td>
-                <td>Yes<input type=radio value=1 name=SB4/></td>
+                <td><input type=radio value=0 name=SB4 /></td>
+                <td><input type=radio value=1 name=SB4 /></td>
             </tr>
             <tr>
                 <td data-id=SB5 data-custom=1>Body Mass Index more than 35 kg/m2 ?</td>
-                <td>No<input type=radio value=0 name=SB5 /></td>
-                <td>Yes<input type=radio value=1 name=SB5 /></td>
+                <td><input type=radio value=0 name=SB5 /></td>
+                <td><input type=radio value=1 name=SB5 /></td>
             </tr>
             <tr>
                 <td data-id=SB6 data-custom=1>Age older than 50?</td>
-                <td>No<input type=radio value=0 name=SB6 /></td>
-                <td>Yes<input type=radio value=1 name=SB6 /></td>
+                <td><input type=radio value=0 name=SB6 /></td>
+                <td><input type=radio value=1 name=SB6 /></td>
             </tr>
             <tr>
                 <td data-id=SB7 data-custom=1>Neck size large ? (measured around Adams apple)?</td>
-                <td>No<input type=radio value=0 name=SB7 /></td>
-                <td>Yes<input type=radio value=1 name=SB7 /></td>
+                <td><input type=radio value=0 name=SB7 /></td>
+                <td><input type=radio value=1 name=SB7 /></td>
             </tr>
             <tr>
                 <td data-id=SB8 data-custom=1>For male, is your shirt collar 17 inches/ 43cm or larger? OR For female, is your shirt collar 16 inches/ 41 cm or larger?</td>
-                <td>No<input type=radio value=0 name=SB8 /></td>
-                <td>Yes<input type=radio value=1 name=SB8 /></td>
+                <td><input type=radio value=0 name=SB8 /></td>
+                <td><input type=radio value=1 name=SB8 /></td>
             </tr>
             <tr>
             <td data-id=SB9 data-custom=1>Gender = Male?</td>
-                <td>No<input type=radio value=0 name=SB9 /></td>
-                <td>Yes<input type=radio value=1 name=SB9 /></td>
+                <td><input type=radio value=0 name=SB9 /></td>
+                <td><input type=radio value=1 name=SB9 /></td>
             </tr>
           </table><br>&nbsp;<a id=save2__ID class=save_and_back__ID >Save &amp; Back</a>
     </form>
@@ -144,6 +142,7 @@
     #tb__ID tr td:nth-child(5)
     {
         text-align: center;
-        padding-top: 5px;
+        padding:10px;
+        margin:auto;
     }
 </style>
