--- a/modules/edc/task/stopbang-form.html
+++ b/modules/edc/task/stopbang-form.html
@@ -5,8 +5,8 @@
             <colgroup><col style='width:450px' />
                 <col style='width:80px;text-align:center!important' />
                 <col style='width:80px' />
-                <col style='width:80px' />
-                <col style='width:80px' />
+                <!-- <col style='width:80px' />
+                <col style='width:80px' /> -->
             </colgroup>
 
             <tr><td colspan=5 class='header__ID'>STOPBANG Questionnaire</td></tr>
