--- a/modules/panel/task_links.html
+++ b/modules/panel/task_links.html
@@ -20,122 +20,34 @@
   </div>
 
   <div class='nav__ID'>
-      <!--span><u>Screening</u></span><br>
-      <ul>
-        <li module=Screening_Visitdate>Visit date</li>
-        <li module=Screening_Anthro>Anthropometry</li>
-        <li module=Screening_Actigraphy>Actigraphy</li>
-        <li module=Screening_Sleepdiary>Sleep Diary</li>
-        <li module=Screening_DiagnosticPSG>Diagnostic Sleep PSG300 Report </li>
-        <li module=Screening_EDF> EDF file Upload</li>
-        <li module=Wristox>WristOx</li>
-        <li module=Screening_Sleepscoring>Sleep Scoring File Upload</li>
-        <li module=Screening_IncluExclu>Inclusion & Exclusion Criteria</li>
-      </ul>
-    <br-->
-    <span>Screening</span>
-    <br>
-    <b>Select which Participant Group you are Screening</b>
-    <br>
-    <br>
-    <button type="button" class="collapsible">Chronic Fatigue Syndrome</button>
-      <div class="content">
-        <br>
-        <ul>
-          <li module=Screening_Visitdate>Visit date</li>
-          <li module=Screening_Anthro>Anthropometry</li>
-          <li module=Screening_Actigraphy>Actigraphy</li>
-          <li module=Screening_Sleepdiary>Sleep Diary</li>
-          <li module=Screening_DiagnosticPSG>Diagnostic Sleep PSG300 Report </li>
-          <li module=Screening_EDF> EDF file Upload</li>
-          <li module=Wristox>WristOx</li>
-          <li module=Screening_Sleepscoring>Sleep Scoring File Upload</li>
-          <li module=Screening_IncluExclu>Inclusion & Exclusion Criteria</li>
-        </ul>
-        <span>Questionnaires</span>
-        <ul>
-          <li module=Screening_SB>StopBANG Questionnaire</li>
-          <li module=Screening_MFSI>Multidimensional Fatigue Symptom Inventory (MFSI)</li>
-          <li module=Screening_DASS>Depression Anxiety Stress Scale (DASS-21)</li>
-          <li module=Screening_PSQI>Pittsburgh Sleep Quality Index (PSQI)</li>
-          <li module=Screening_Chalder>Chalder's Fatigue Scale</li>
-          <li module=Screening_ESS>Epworth Sleepiness Scale (ESS)</li>
-          <li module=Screening_Canadian>Canadian Consensus Severity Scale</li>
-          <li module=Screening_SFH> Short Form Health Survey </li> 
-        </ul>
-      </div>
-    <button type="button" class="collapsible">Non-Restorative Sleep</button>
-      <div class="content">
-        <br>
-        <ul>
-        <li module=Screening_Visitdate>Visit date</li>
-        <li module=Screening_Anthro>Anthropometry</li>
-        <li module=Screening_Actigraphy>Actigraphy</li>
-        <li module=Screening_Sleepdiary>Sleep Diary</li>
-        <li module=Screening_DiagnosticPSG>Diagnostic Sleep PSG300 Report </li>
-        <li module=Screening_EDF> EDF file Upload</li>
-        <li module=Wristox>WristOx</li>
-        <li module=Screening_Sleepscoring>Sleep Scoring File Upload</li>
-        <li module=Screening_IncluExclu>Inclusion & Exclusion Criteria</li>
-        </ul>
-        <span>Questionnaires</span>
-          <ul>
-          <li module=Screening_SB>StopBANG Questionnaire</li>
-          <li module=Screening_PSQI>Pittsburgh Sleep Quality Index (PSQI)</li>
-          <li module=Screening_DASS>Depression Anxiety Stress Scale (DASS-21)</li>
-          <li module=Screening_Chalder>Chalder's Fatigue Scale</li>
-          <li module=Screening_ESS>Epworth Sleepiness Scale (ESS)</li>
-          </ul>
-      </div>
-    <button type="button" class="collapsible">Insomnia</button>
-    <div class="content">
-      <br>
-      <ul>
-      <li module=Screening_Visitdate>Visit date</li>
-      <li module=Screening_Anthro>Anthropometry</li>
-      <li module=Screening_Actigraphy>Actigraphy</li>
-      <li module=Screening_Sleepdiary>Sleep Diary</li>
-      <li module=Screening_DiagnosticPSG>Diagnostic Sleep PSG300 Report </li>
-      <li module=Screening_EDF> EDF file Upload</li>
-      <li module=Wristox>WristOx</li>
-      <li module=Screening_Sleepscoring>Sleep Scoring File Upload</li>
-      <li module=Screening_IncluExclu>Inclusion & Exclusion Criteria</li>
-      </ul>
-      <span>Questionnaires</span>
-      <ul>
-        <li module=Screening_SB>StopBANG Questionnaire</li>
-        <li module=Screening_ISI>Insomnia Severity Index</li>
-        <li module=Screening_PSQI>Pittsburgh Sleep Quality Index (PSQI)</li>
-        <li module=Screening_DASS>Depression Anxiety Stress Scale (DASS-21)</li>
-        <li module=Screening_Chalder>Chalder's Fatigue Scale</li>
-        <li module=Screening_ESS>Epworth Sleepiness Scale (ESS)</li>
-      </ul>
-    </div>
-    <button type="button" class="collapsible">Healthy Controls</button>
-    <div class="content">
-      <br>
-      <ul>
-        <li module=Screening_Visitdate>Visit date</li>
-        <li module=Screening_Anthro>Anthropometry</li>
-        <li module=Screening_Actigraphy>Actigraphy</li>
-        <li module=Screening_Sleepdiary>Sleep Diary</li>
-        <li module=Screening_DiagnosticPSG>Diagnostic Sleep PSG300 Report </li>
-        <li module=Screening_EDF> EDF file Upload</li>
-        <li module=Wristox>WristOx</li>
-        <li module=Screening_Sleepscoring>Sleep Scoring File Upload</li>
-        <li module=Screening_IncluExclu>Inclusion & Exclusion Criteria</li>
-      </ul>
-      <span>Questionnaires</span>
-      <ul>
-        <li module=Screening_SB>StopBANG Questionnaire</li>
-        <li module=Screening_ISI>Insomnia Severity Index</li>
-        <li module=Screening_PSQI>Pittsburgh Sleep Quality Index (PSQI)</li>
-        <li module=Screening_DASS>Depression Anxiety Stress Scale (DASS-21)</li>
-        <li module=Screening_Chalder>Chalder's Fatigue Scale</li>
-        <li module=Screening_ESS>Epworth Sleepiness Scale (ESS)</li>
-      </ul>
-    </div>
-  </div>
+    <span>Screening</span><br>
+		      <ul>
+		        <li module=Screening_Visitdate>Visit date</li>
+		        <li module=Screening_Anthro>Anthropometry</li>
+		        <li module=Wristox>WristOx</li>
+		        <li module=Screening_Actigraphy>Actigraphy</li>
+		        <li module=Screening_Sleepdiary>Sleep Diary</li>
+		        <li module=Screening_DiagnosticPSG>Diagnostic Sleep Report </li>
+		        <li module=Screening_EDF> EDF file Upload</li>
+		        <li module=Screening_Sleepscoring>Sleep Scoring File Upload</li>
+		        <li module=Screening_IncluExclu>Inclusion & Exclusion Criteria</li>
+		      </ul>
+			<br>
+			<span>Questionnaires</span><br>
+					<ul>
+						<li module=Screening_Chalder>Chalder's Fatigue Scale</li>
+						<li module=Screening_DASS>Depression Anxiety Stress Scale (DASS-21)</li>
+						<li module=Screening_ESS>Epworth Sleepiness Scale (ESS)</li>
+						<li module=Screening_ISI>Insomnia Severity Index</li>
+						<li module=screening_ffs>Evening Flinder's Fatigue Scale(Needs new Table ID) </li>
+						<li module=screening_hs>Hyperarousal scale (In Development)</li>
+						<li module=Screening_SB>StopBANG Questionnaire</li>
+						<li module=Screening_MFSI>Multidimensional Fatigue Symptom Inventory (MFSI)</li>
+						<li module=Screening_PSQI>Pittsburgh Sleep Quality Index (PSQI)</li>
+						<li module=Screening_SFH> Short Form Health Survey </li>
+					</ul>
+	</div>
+
 
   <div class='nav__ID'>
   <span>Visit 1 - Evening</span><br>
@@ -149,18 +61,14 @@
   <br>
     <ul>
       <li module=Night_Visit_Flinders>Evening Flinder's Fatigue Scale </li>
-      <li module=Mental_Fatigue_One> Evening Mental Fatigue Scale 1.0</li>
       <li module=Pre_PASAT>Evening Paced Auditory Serial Addition Task (PASAT)</li>
-      <li module=Mental_Fatigue_Two>Evening Mental Fatigue Scale 1.1  </li>
       <li module=Night_Visit_LCT>Evening Letter Cancellation Task</li>
-      <li module=Mental_Fatigue_Three>Evening Mental Fatigue Scale 1.2 </li>
-      <li module=Mental_Fatigue_Four> Mental Fatigue Scale 1.3 </li>
       <li module=NightVisit_ERP> Evening Event Related Potentials (ERP) </li>
-      <li module=Mental_Fatigue_Five> Evening Mental Fatigue Scale 1.4 </li>
+     
     </ul>
 
   <br>
-  <span> Memory tasks Set 1 - Word Learning and Recall</span>
+  <span> Memory tasks Set 1 - Word Learning and Recall</span><br>
     <ul>
       <li module=Prac_Evening_Wordpairs_Set1>Set 1 Word Pairs- Practice </li>
       <li module=Evening_Wordpairs_S1T1>Evening Memory task Word Pair Set 1 Trial 1</li>
@@ -169,7 +77,7 @@
     </ul>
 
   <br>
-  <span> Memory tasks Set 2 - Word Learning and Recall</span>
+  <span> Memory tasks Set 2 - Word Learning and Recall</span><br>
     <ul>
       <li module=Prac_Evening_Wordpairs_Set2>Set 2 Word Pairs- Practice</li>
       <li module=Evening_Wordpairs_S2T1>Evening Memory task Word Pair Set 2 Trial 1</li>
@@ -177,7 +85,7 @@
       <li module=Evening_Wordpairs_S2T3>Evening Memory task Word Pair Set 2 Trial 3</li>
     </ul>
   <br>
-  <span> Tests and Questionnaires 2</span>
+  <span> Tests and Questionnaires 2</span><br>
   <ul>
     <li module=FTT_12>Evening Finger Tapping Task (12 Minutes)</li>
     <li module=KSS1>Evening Karolinska Sleepiness Scale (KSS) 1.0</li>
@@ -192,27 +100,40 @@
     <ul>
       <li module=KSS2>Morning Karolinska Sleepiness Scale (KSS) 2.0</li>
       <li module=KDT2>Morning Karolinska Drowsiness Test (KDT) 2.0</li>
-    <br>
-      <li module=Mental_Fatigue_six>Morning Mental Fatigue Scale 2.0 </li>
       <li module=Morning_PASAT>Morning Paced Auditory Serial Addition Test (PASAT)</li>
-      <li module=Mental_Fatigue_seven> Morning Mental Fatigue Scale 2.1 </li>
       <li module=Morning_word_pair_Set_1> Morning Memory Task Word Pairs Set 1</li>
       <li module=Morning_word_pair_Set_2> Morning Memory Task Word Pairs Set 2</li>
-      <li module=Morning_Memorytask_Fileupload> Morning Memory Task Paperwork</li>
       <li module=FTT_6>Morning Finger Tapping Task (6 Minutes)</li>
       <li module=KSS3>Morning Karolinska Sleepiness Scale (KSS) 2.1</li>
       <li module=KDT2>Morning Karolinska Drowsiness Test (KDT) 2.1</li>
     <br>
     </ul>
-  </div>
+	<span><u>Post Visit Manual Data Entry</span></u><br>
+	<ul>
+			<li module=wordpairs_scores> Word Pair Scores</li>
+			<li module=pasat_scores>Paced Auditory Serial Addition Task (PASAT)</li>
+			<li module=visit_anthro>Visit 1 -  Anthropometry</li>
+			<li module=visit_Actigraphy>Actigraphy</li>
+			<li module=visit_Sleepdiary>Sleep Diary</li>
 
+	</ul>
 
-  <div class='nav__ID'>
-    <span>Data Uploading</span>
-    <ul>
+<button type="button" class="collapsible"><b>Archive Data</b></button>
+<div class="content">
+		<ul>	
+			From Previous Iterations of Protocol: 
       <li module=Morning_Bloodsaliva> Blood and Saliva Sample</li>
       <li module=MRI> Magnetic Resonance Imagining </li>
       <li module=RSQ_D>Restorative Sleep Questionnaire Daily Version (RSQ-D)</li>
       <li module=RSQ_W >Restorative Sleep Questionnaire Weekly Version (RSQ-W)</li>
-    </ul>
+			<li module=Mental_Fatigue_One> Evening Mental Fatigue Scale 1.0</li>
+			<li module=Mental_Fatigue_Two>Evening Mental Fatigue Scale 1.1 </li>
+			<li module=Mental_Fatigue_Three>Evening Mental Fatigue Scale 1.2 </li>
+			<li module=Mental_Fatigue_Four> Mental Fatigue Scale 1.3 </li>
+			<li module=Mental_Fatigue_Five> Evening Mental Fatigue Scale 1.4 </li>
+      <li module=Mental_Fatigue_six>Morning Mental Fatigue Scale 2.0 </li>
+      <li module=Mental_Fatigue_seven> Morning Mental Fatigue Scale 2.1 </li>
+	</ul>
+	</div>
   </div>
+
