--- a/modules/edc/task/Anthro.html
+++ b/modules/edc/task/Anthro.html
@@ -6,7 +6,7 @@
         //-------------------------------------
         VmInclude:__COMPONENT__/grid/grid.v3.js
         _json='';
-        VmInclude:__BASE__/woolcock-imr/The-Effect-of-Sleep-on-Memory/common-code/task.js
+        VmInclude:__CURRENT_PATH__/task.js
         //-------------------------------------
         _task_fields="Height_cm,Weight_kg,BMI,Waist_cm,Neck_cm,Head_cm,Hip_cm,BP1_sys_dia";
         _fields="_Form,Status|S2,Notes|NT,Participant,"+_task_fields;
