--- a/modules/edc/task/pasat.html
+++ b/modules/edc/task/pasat.html
@@ -7,7 +7,7 @@
         VmInclude:__COMPONENT__/grid/grid.v3.js
         VmInclude:__CURRENT_PATH__/task-data.js
         //-------------------------------------
-        _task_fields="Set,Document,rate_1_total,rate_1_percent,rate_2_total,rate_2_precent,";
+        _task_fields="Set,Document,rate_1_total,rate_1_percent,rate_2_total,rate_2_precent";
         _fields="_Form,Status|S3,Notes|NT,Participant,"+_task_fields;
         _fields+=",Submit Date|DateTime,Submitted by|Author,_Delete,_Hidden|Participant_uid";
         //-------------------------------------
