--- a/modules/panel/task_links.html
+++ b/modules/panel/task_links.html
@@ -39,8 +39,8 @@
 						<li module=Screening_DASS>Depression Anxiety Stress Scale (DASS-21)</li>
 						<li module=Screening_ESS>Epworth Sleepiness Scale (ESS)</li>
 						<li module=Screening_ISI>Insomnia Severity Index</li>
-						<li module=screening_ffs>Evening Flinder's Fatigue Scale(Needs new Table ID) </li>
-						<li module=screening_hs>Hyperarousal scale (In Development)</li>
+						<li module=screening_ffs>Evening Flinder's Fatigue Scale</li>
+						<li module=screening_hs>Hyperarousal scale</li>
 						<li module=Screening_SB>StopBANG Questionnaire</li>
 						<li module=Screening_MFSI>Multidimensional Fatigue Symptom Inventory (MFSI)</li>
 						<li module=Screening_PSQI>Pittsburgh Sleep Quality Index (PSQI)</li>
