--- a/modules/edc/neurocog/letter-cancellation-data.html
+++ b/modules/edc/neurocog/letter-cancellation-data.html
@@ -6,14 +6,13 @@
         //-------------------------------------
           //-------------------------------------
         VmInclude:__COMPONENT__/grid/grid.v3.js
-        _json='';
-        VmInclude:__CURRENT_PATH__/task.js
+        VmInclude:__CURRENT_PATH__/task-data.js
         //------------------------------------
         //-------------------------------------
         $('#title__ID').text('Letter Cancellation Task')
         //-------------------------------------
         _task_fields="Average_Hits,Average_Omissions,Average_Commissions,duration_0,hits_0,omissions_0,commissions_0,duration_1,hits_1,omissions_1,commissions_1,duration_2,hits_2,omissions_2,commissions_2,duration_3,hits_3,omissions_3,commissions_3,duration_4,hits_4,omissions_4,commissions_4,duration_5,hits_5,omissions_5,commissions_5,duration_6,hits_6,omissions_6,commissions_6,Duration,Hits,Omissions,Commissions";
-        _fields="_Form,_Status,_Notes,_Participant_ID,Participant,"+_task_fields;
+        _fields="_Form,_Status,_Notes,_Participant_uid,Participant,"+_task_fields;
 				_fields+=",Submit_date,Submitted_by,_Delete";
 				_grid_to_form_parameters={task_fields:_task_fields};
         //-------------------------------------
@@ -31,6 +30,5 @@
     }
 </script>
 <style>
-    VmInclude:__COMPONENT__/grid/grid.v3.css
-		
+    VmInclude:__COMPONENT__/grid/grid.v3.css		
 </style>
