--- a/modules/edc/task/pasat.html
+++ b/modules/edc/task/pasat.html
@@ -5,23 +5,20 @@
     function F__ID(){
         //-------------------------------------
         VmInclude:__COMPONENT__/grid/grid.v3.js
-        VmInclude:__CURRENT_PATH__/task-data.js
+        VmInclude:__CURRENT_PATH__/task.js
+        _json='';
         //-------------------------------------
-        _task_fields="Set,Document,rate_1_total,rate_1_percent,rate_2_total,rate_2_precent";
-        _fields="_Form,Status|S3,Notes|NT,Participant,"+_task_fields;
+        _task_fields="Evening_Set1_number_correct,Evening_Set1_percent_correct,Evening_Set2_number_correct,Evening_Set2_percent_correct,Morning_Set1_number_correct,Morning_Set1_percent_correct,Morning_Set2_number_correct,Morning_Set2_percent_correct";
+        _fields="_Form|form_module,Status|S2,Notes|NT,Participant,"+_task_fields;
         _fields+=",Submit Date|DateTime,Submitted by|Author,_Delete,_Hidden|Participant_uid";
+        _grid_to_form_parameters={task_fields:_task_fields};
         //-------------------------------------
-        $('#D__ID').on('load',function(){    _set_req(); _request_data(); })
-        $('#D__ID').on('back',function(){    _set_req(); _request_data(); })
+        $('#D__ID').on('load',function(){  _set_req(); _request_data(); })
+        $('#D__ID').on('back',function(){  _set_req(); _request_data(); })
         //-------------------------------------
         _cell_render=function(records,I,field,td,set_value,source){
             _default_cell_render(records,I,field,td,set_value,source);
-            switch(field){
-                case 'Document':
-                    VmInclude:__PARTS__/grid/field_file.js
-                break;
-							}		
-						}
+        }
         //-------------------------------------
         _before_submit=function(record,dbv){
             return _set_status_and_participant(record,dbv);
@@ -31,14 +28,4 @@
 </script>
 <style>
     VmInclude:__COMPONENT__/grid/grid.v3.css
-    ul.ui-autocomplete.ui-menu{
-        font-size:12px;
-        background:#eee;
-    }
-    .ui-autocomplete li:hover{
-        color:White;
-        background:#96B202;
-        font-weight:normal;
-        outline:none;
-    }
 </style>
