--- a/modules/panel/task_links.html
+++ b/modules/panel/task_links.html
@@ -39,9 +39,9 @@
 						<li module=Screening_DASS>Depression Anxiety Stress Scale (DASS-21)</li>
 						<li module=Screening_ESS>Epworth Sleepiness Scale (ESS)</li>
 						<li module=Screening_ISI>Insomnia Severity Index</li>
-						<li module=screening_ffs>Evening Flinder's Fatigue Scale</li>
-						<li module=screening_hs>Hyperarousal scale</li>
-						<li module=Screening_SB>StopBANG Questionnaire</li>
+						<li module=screening_ffs>Flinder's Fatigue Scale</li>
+						<li module=screening_hs>Hyperarousal scale</li> 
+						<!-- <li module=Screening_SB>StopBANG Questionnaire</li> -->
 						<li module=Screening_MFSI>Multidimensional Fatigue Symptom Inventory (MFSI)</li>
 						<li module=Screening_PSQI>Pittsburgh Sleep Quality Index (PSQI)</li>
 						<li module=Screening_SFH> Short Form Health Survey </li>
@@ -104,7 +104,6 @@
     <ul>
       <li module=KSS2>Morning Karolinska Sleepiness Scale (KSS) 2.0</li>
       <li module=KDT2>Morning Karolinska Drowsiness Test (KDT) 2.0</li>
-      <li module=pasat_scores>Morning Paced Auditory Serial Addition Test (PASAT)</li>
       <!-- <li module=Morning_word_pair_Set_1> Morning Memory Task Word Pairs Set 1</li>
       <li module=Morning_word_pair_Set_2> Morning Memory Task Word Pairs Set 2</li>
       <li module=FTT_6>Morning Finger Tapping Task (6 Minutes)</li> -->
@@ -117,8 +116,8 @@
 	<span><u>Post Visit Manual Data Entry</span></u><br>
 	<ul>
 			<li module=wordpairs_scores> Word Pair Scores</li>
-			<li module=pasat_scores>Paced Auditory Serial Addition Task (PASAT)</li>
-			<li module=visit_anthro>Visit 1 -  Anthropometry</li>
+      <li module=pasat_scores>Paced Auditory Serial Addition Test (PASAT)</li>
+			<!-- <li module=visit_anthro>Visit 1 -  Anthropometry</li> -->
 			<li module=visit_Actigraphy>Actigraphy</li>
 			<li module=visit_Sleepdiary>Sleep Diary</li>
 
@@ -135,7 +134,7 @@
 			<li module=Mental_Fatigue_One> Evening Mental Fatigue Scale 1.0</li>
 			<li module=Mental_Fatigue_Two>Evening Mental Fatigue Scale 1.1 </li>
 			<li module=Mental_Fatigue_Three>Evening Mental Fatigue Scale 1.2 </li>
-			<li module=Mental_Fatigue_Four> Mental Fatigue Scale 1.3 </li>
+			<li module=Mental_Fatiguve_Four> Mental Fatigue Scale 1.3 </li>
 			<li module=Mental_Fatigue_Five> Evening Mental Fatigue Scale 1.4 </li>
       <li module=Mental_Fatigue_six>Morning Mental Fatigue Scale 2.0 </li>
       <li module=Mental_Fatigue_seven> Morning Mental Fatigue Scale 2.1 </li>
