--- a/modules/panel/task_links.html
+++ b/modules/panel/task_links.html
@@ -24,8 +24,8 @@
 		      <ul>
 		        <li module=Screening_Visitdate>Visit date</li>
 		        <li module=Screening_Anthro>Anthropometry</li>
-		        <li module=Screening_wristox>WristOx</li>
-		        <li module=Screening_Actigraphy>Actigraphy</li>
+		        <!-- <li module=Screening_wristox>WristOx</li>
+		        <li module=Screening_Actigraphy>Actigraphy</li> -->
 		        <li module=Screening_Sleepdiary>Sleep Diary</li>
 		        <li module=Screening_DiagnosticPSG>Diagnostic Sleep Report </li>
 		        <!-- <li module=Screening_EDF> EDF file Upload</li> -->
@@ -60,7 +60,7 @@
   <span>Tests and Questionnaires 1 </span>
   <br>
     <ul>
-      <li module=Night_Visit_Flinders>Evening Flinder's Fatigue Scale </li>
+      <!-- <li module=Night_Visit_Flinders>Evening Flinder's Fatigue Scale </li> -->
       <li module=pasat_scores>Evening Paced Auditory Serial Addition Task (PASAT)</li>
       <li> <a style="color:black" href="https://garrychowimr.github.io/nrs_cogtests/?/night-task" target="_blank">Letter Cancellation Tasks</a></li>
       <li> <a style="color:black"href="https://garrychowimr.github.io/nrs_cogtests/?/night-task" target="_blank">Word Pairs Memory Tasks</a></li>
