--- a/modules/panel/task_links.html
+++ b/modules/panel/task_links.html
@@ -62,9 +62,20 @@
     <ul>
       <!-- <li module=Night_Visit_Flinders>Evening Flinder's Fatigue Scale </li> -->
       <li module=pasat_scores>Evening Paced Auditory Serial Addition Task (PASAT)</li>
-      <li> <a style="color:black" href="https://garrychowimr.github.io/nrs_cogtests/?/night-task" target="_blank">Letter Cancellation Tasks</a></li>
-      <li> <a style="color:black"href="https://garrychowimr.github.io/nrs_cogtests/?/night-task" target="_blank">Word Pairs Memory Tasks</a></li>
-      <li> <a style="color:black"href="https://garrychowimr.github.io/nrs_cogtests/?/night-task" target="_blank">Finger Tapping Task</a></li>
+      <li> <a style="color:black" href="https://garrychowimr.github.io/nrs_cogtests/?/lct_form" target="_blank">Letter Cancellation Tasks</a></li>
+    </ul>
+    <ul>
+      <li> <a style="color:black"href="https://garrychowimr.github.io/nrs_cogtests/m/word-pairs/evening-wordpairs-set1-practice" target="_blank">Word Pairs Memory Tasks Set 1 Practice</a></li>
+      <li> <a style="color:black"href="https://garrychowimr.github.io/nrs_cogtests/m/word-pairs/evening-wordpairs-set1-trial1.html" target="_blank">Word Pairs Memory Tasks Set 1 Trial 1</a></li>
+      <li> <a style="color:black"href="https://garrychowimr.github.io/nrs_cogtests/m/word-pairs/evening-wordpairs-set1-trial2.html" target="_blank">Word Pairs Memory Tasks Set 1 Trial 2</a></li>
+      <li> <a style="color:black"href="https://garrychowimr.github.io/nrs_cogtests/m/word-pairs/evening-wordpairs-set1-trial3.html" target="_blank">Word Pairs Memory Tasks Set 1 Trial 3</a></li>
+      <li> <a style="color:black"href="https://garrychowimr.github.io/nrs_cogtests/m/word-pairs/evening-wordpairs-set2-practice" target="_blank">Word Pairs Memory Tasks Set 2 Practice</a></li>
+      <li> <a style="color:black"href="https://garrychowimr.github.io/nrs_cogtests/m/word-pairs/evening-wordpairs-set2-trial1" target="_blank">Word Pairs Memory Tasks Set 2 Trial 1</a></li>
+      <li> <a style="color:black"href="https://garrychowimr.github.io/nrs_cogtests/m/word-pairs/evening-wordpairs-set2-trial2" target="_blank">Word Pairs Memory Tasks Set 2 Trial 2</a></li>
+      <li> <a style="color:black"href="https://garrychowimr.github.io/nrs_cogtests/m/word-pairs/evening-wordpairs-set1-trial3" target="_blank">Word Pairs Memory Tasks Set 2 Trial 3</a></li>
+      <li> <a style="color:black"href="https://garrychowimr.github.io/nrs_cogtests/?/finger-tapping12-before-form" target="_blank">Evening Finger Tapping Task (4-3-2-1-4) </a></li>
+      <li> <a style="color:black"href="https://garrychowimr.github.io/nrs_cogtests/?/alt-finger-tapping12-before-form" target="_blank">Alternate Evening Finger Tapping Task (1-4-2-3-1)</a></li>
+      <br>
       <!-- <li module=Night_Visit_LCT><b>OLD</b>Evening Letter Cancellation Task</li>
 			<li module=new-lct-form><b>NEW</b>Evening Letter Cancellation Task</li> -->
       <!-- <li module=NightVisit_ERP> Evening Event Related Potentials (ERP) </li> -->
@@ -107,8 +118,10 @@
       <!-- <li module=Morning_word_pair_Set_1> Morning Memory Task Word Pairs Set 1</li>
       <li module=Morning_word_pair_Set_2> Morning Memory Task Word Pairs Set 2</li>
       <li module=FTT_6>Morning Finger Tapping Task (6 Minutes)</li> -->
-      <li> <a style="color:black"href="https://garrychowimr.github.io/nrs_cogtests/?/morning-task" target="_blank">Morning Word Pairs</a></li>
-      <li> <a style="color:black"href="https://garrychowimr.github.io/nrs_cogtests/?/morning-task" target="_blank">Finger Tapping Task</a></li>
+      <li> <a style="color:black"href="https://garrychowimr.github.io/nrs_cogtests/m/word-pairs/morning-wordpairs-set1" target="_blank">Morning Word Pairs (Recall and Recognition Set 1)</a></li>
+      <li> <a style="color:black"href="https://garrychowimr.github.io/nrs_cogtests/m/word-pairs/morning-wordpairs-set2" target="_blank">Morning Word Pairs (Recall and Recognition Set 2)</a></li>
+      <li> <a style="color:black"href="https://garrychowimr.github.io/nrs_cogtests/?/finger-tapping6-after-form" target="_blank">Morning Finger Tapping Task (4-3-2-1-4)</a></li>
+      <li> <a style="color:black"href="https://garrychowimr.github.io/nrs_cogtests/?/alt-finger-tapping6-after-form" target="_blank">Morning Finger Tapping Task (1-4-2-3-1)</a></li>
       <li module=KSS3>Morning Karolinska Sleepiness Scale (KSS) 2.1</li>
       <li module=KDT2>Morning Karolinska Drowsiness Test (KDT) 2.1</li>
     <br>
@@ -117,6 +130,7 @@
 	<ul>
 			<li module=wordpairs_scores> Word Pair Scores</li>
       <li module=pasat_scores>Paced Auditory Serial Addition Test (PASAT)</li>
+      <li module=pasat_scores></li>
 			<!-- <li module=visit_anthro>Visit 1 -  Anthropometry</li> -->
 			<li module=visit_Actigraphy>Actigraphy</li>
 			<li module=visit_Sleepdiary>Sleep Diary</li>
