updating ISI-form

--- a/modules/edc/task/isi-form.html
+++ b/modules/edc/task/isi-form.html
@@ -19,7 +19,7 @@
             </td></tr>
 
             <tr><td colspan=6 class='subheader__ID '>For each question, please click on the number that best describes your answer.</td></tr>
-             <tr><td colspan=6 class=' '><br /><b>1. Please rate the CURRENT SEVERITY (PAST 3 DAYS) of your insomnia problem(s).</b>
+             <tr><td colspan=6 class=' '><br /><b>1. Please rate the CURRENT SEVERITY (i.e. LAST 2 WEEKS)) of your insomnia problem(s).</b>
             </td></tr>
             <tr><th></th><th>None</th><th>Mild</th><th>Moderate</th><th>Severe</th><th>Very Severe</th></tr>
             <tr><td>a. Difficulty falling asleep </td><td data-id=ISI_1a data-custom=1><input class=modified_radio__ID type=radio value=0 name=ISI_1a ><label class=modified_number__ID>0</label></td><td><input class=modified_radio__ID type=radio value=1 name=ISI_1a  ><label class=modified_number__ID>1</label></td><td><input class=modified_radio__ID type=radio value=2 name=ISI_1a  ><label class=modified_number__ID>2</label></td><td><input class=modified_radio__ID type=radio value=3 name=ISI_1a  ><label class=modified_number__ID>3</label></td><td><input class=modified_radio__ID type=radio value=4 name=ISI_1a  ><label class=modified_number__ID>4</label></td></tr>
