timepoint + export changes

--- a/modules/edc/task/isi-data.html
+++ b/modules/edc/task/isi-data.html
@@ -8,7 +8,7 @@
         _json = '';
         VmInclude: __CURRENT_PATH__/task.js    
          //-------------------------------------
-        _task_fields="ISI_1a,ISI_1b,ISI_1c,ISI_2,ISI_3,ISI_4,ISI_5,ISI_1,ISI";
+        _task_fields="timepoint,ISI_1a,ISI_1b,ISI_1c,ISI_2,ISI_3,ISI_4,ISI_5,ISI_1,ISI";
         _fields="_Form|form_module,Status|S3,Notes|NT,Participant,"+_task_fields;
         _fields+=",Submit Date|DateTime,Submitted by|Author,_Delete,_Hidden|Participant_uid";
         //-------------------------------------
