--- a/modules/edc/task/mfsi.html
+++ b/modules/edc/task/mfsi.html
@@ -8,7 +8,7 @@
         _json='';
         VmInclude:__CURRENT_PATH__/task.js
         //-------------------------------------
-        _task_fields="MFSI_1,MFSI_2,MFSI_3,MFSI_4,MFSI_5,MFSI_6,MFSI_7,MFSI_8,MFSI_9,MFSI_10,MFSI_11,MFSI_12,MFSI_13,MFSI_14,MFSI_15,MFSI_16,MFSI_17,MFSI_18,MFSI_19,MFSI_20,MFSI_21,MFSI_22,MFSI_23,MFSI_24,MFSI_25,MFSI_26,MFSI_27,MFSI_28,MFSI_29,MFSI_30,MFSI_G,MFSI_P,MFSI_E,MFSI_M,MFSI_V,MFSI";
+        _task_fields="timepoint,MFSI_1,MFSI_2,MFSI_3,MFSI_4,MFSI_5,MFSI_6,MFSI_7,MFSI_8,MFSI_9,MFSI_10,MFSI_11,MFSI_12,MFSI_13,MFSI_14,MFSI_15,MFSI_16,MFSI_17,MFSI_18,MFSI_19,MFSI_20,MFSI_21,MFSI_22,MFSI_23,MFSI_24,MFSI_25,MFSI_26,MFSI_27,MFSI_28,MFSI_29,MFSI_30,MFSI_G,MFSI_P,MFSI_E,MFSI_M,MFSI_V,MFSI";
         _fields="_Form|form_module,Status|S2,Notes|NT,Participant,"+_task_fields;
         _fields+=",Submit Date|DateTime,Submitted by|Author,_Delete,_Hidden|Participant_uid";
         _grid_to_form_parameters={task_fields:_task_fields};
