--- a/modules/edc/task/Epworth_Sleepiness_Scale.html
+++ b/modules/edc/task/Epworth_Sleepiness_Scale.html
@@ -8,9 +8,11 @@
         _json='';
         VmInclude:__CURRENT_PATH__/task.js
         //-------------------------------------
-        _task_fields="ESS_1,ESS_2,ESS_3,ESS_4,ESS_5,ESS_6,ESS_7,ESS_8,ESS";
+        _task_fields="timepoint,ESS_1,ESS_2,ESS_3,ESS_4,ESS_5,ESS_6,ESS_7,ESS_8,ESS";
         _fields="_Form|form_module,Status|S2,Notes|NT,Participant,"+_task_fields;
         _fields+=",Submit Date|DateTime,Submitted by|Author,_Delete,_Hidden|Participant_uid";
+        
+
         _grid_to_form_parameters={task_fields:_task_fields};
         //-------------------------------------
         $('#D__ID').on('load',function(){  _set_req(); _request_data(); })
