--- a/modules/edc/task/Flinders.html
+++ b/modules/edc/task/Flinders.html
@@ -8,7 +8,7 @@
         _json='';
         VmInclude:__CURRENT_PATH__/task.js
         //-------------------------------------
-        _task_fields="FFS1,FFS2,FFS3,FFS4,FFS5,FFS6,FFS7,FFS";
+        _task_fields="timepoint,FFS1,FFS2,FFS3,FFS4,FFS5,FFS6,FFS7,FFS";
         _fields="_Form|form_module,Status|S3,Notes|NT,Participant,"+_task_fields;
         _fields+=",Submit Date|DateTime,Submitted by|Author,_Delete,_Hidden|Participant_uid";
         //-------------------------------------
