--- a/modules/edc/task/chalder.html
+++ b/modules/edc/task/chalder.html
@@ -8,7 +8,7 @@
         _json='';
         VmInclude:__CURRENT_PATH__/task.js
         //-------------------------------------
-        _task_fields="Chalder_1,Chalder_2,Chalder_3,Chalder_4,Chalder_5,Chalder_6,Chalder_7,Chalder_8,Chalder_9,Chalder";
+        _task_fields="timepoint,Chalder_1,Chalder_2,Chalder_3,Chalder_4,Chalder_5,Chalder_6,Chalder_7,Chalder_8,Chalder_9,Chalder";
         _fields="_Form|form_module,Status|S2,Notes|NT,Participant,"+_task_fields;
         _fields+=",Submit Date|DateTime,Submitted by|Author,_Delete,_Hidden|Participant_uid";
         _grid_to_form_parameters={task_fields:_task_fields};
