--- a/modules/edc/task/dass.html
+++ b/modules/edc/task/dass.html
@@ -8,7 +8,7 @@
         _json='';
         VmInclude:__CURRENT_PATH__/task.js
         //-------------------------------------
-        _task_fields="DASS_1,DASS_2,DASS_3,DASS_4,DASS_5,DASS_6,DASS_7,DASS_8,DASS_9,DASS_10,DASS_11,DASS_12,DASS_13,DASS_14,DASS_15,DASS_16,DASS_17,DASS_18,DASS_19,DASS_20,DASS_21,DASS_DS,DASS_AS,DASS_SS";
+        _task_fields="timepoint,DASS_1,DASS_2,DASS_3,DASS_4,DASS_5,DASS_6,DASS_7,DASS_8,DASS_9,DASS_10,DASS_11,DASS_12,DASS_13,DASS_14,DASS_15,DASS_16,DASS_17,DASS_18,DASS_19,DASS_20,DASS_21,DASS_DS,DASS_AS,DASS_SS";
         _fields="_Form|form_module,Status|S2,Notes|NT,Participant,"+_task_fields;
         _fields+=",Submit Date|DateTime,Submitted by|Author,_Delete,_Hidden|Participant_uid";
         _grid_to_form_parameters={task_fields:_task_fields};
