--- a/modules/edc/task/short_form_survey_instrument.html
+++ b/modules/edc/task/short_form_survey_instrument.html
@@ -9,7 +9,7 @@
         VmInclude:__CURRENT_PATH__/task.js
 
         //-------------------------------------
-        _task_fields="SF36_1,SF36_2,SF36_3,SF36_4,SF36_5,SF36_6,SF36_7,SF36_8,SF36_9,SF36_10,SF36_11,SF36_12,SF36_13,SF36_14,SF36_15,SF36_16,SF36_17,SF36_18,SF36_19,SF36_20,SF36_21,SF36_22,SF36_23,SF36_24,SF36_25,SF36_26,SF36_27,SF36_28,SF36_29,SF36_30,SF36_31,SF36_32,SF36_33,SF36_34,SF36_35,SF36_36,Vitality|SF36_VI,Physical functioning|SF36_PF,Bodily pain|SF36_BP,General health perceptions|SF36_GHP,Physical role functioning|SF36_PRF,Emotional role functionin|SF36_ERF,Social role functioning|SF36_SRF,Mental health|SF36_MH, Physical health|SF36_PH,Mean mental health|SF36_MHM";
+        _task_fields="timepoint,SF36_1,SF36_2,SF36_3,SF36_4,SF36_5,SF36_6,SF36_7,SF36_8,SF36_9,SF36_10,SF36_11,SF36_12,SF36_13,SF36_14,SF36_15,SF36_16,SF36_17,SF36_18,SF36_19,SF36_20,SF36_21,SF36_22,SF36_23,SF36_24,SF36_25,SF36_26,SF36_27,SF36_28,SF36_29,SF36_30,SF36_31,SF36_32,SF36_33,SF36_34,SF36_35,SF36_36,Vitality|SF36_VI,Physical functioning|SF36_PF,Bodily pain|SF36_BP,General health perceptions|SF36_GHP,Physical role functioning|SF36_PRF,Emotional role functionin|SF36_ERF,Social role functioning|SF36_SRF,Mental health|SF36_MH, Physical health|SF36_PH,Mean mental health|SF36_MHM";
         _fields="_Form|form_module,Status|S3,Notes|NT,Participant,"+_task_fields;
         _fields+=",Submit Date|DateTime,Submitted by|Author,_Delete,_Hidden|Participant_uid";
         //-------------------------------------
